@@ -507,21 +507,20 @@
 </p>
 
 <p>
-  The application of the 'filter' property to an element
-  formatted with the CSS box model establishes a pseudo-stacking-context the same way that CSS
-  <a href="http://www.w3.org/TR/css3-color/#transparency">'opacity'</a> does,
-  and all the element's descendants are rendered together as a group with the filter
-  effect applied to the group as a whole.
+  The application of the 'filter' property to an element formatted with the CSS box model establishes a new stacking
+  context the same way that CSS <a href="http://www.w3.org/TR/css3-color/#transparency">'opacity'</a> does, and all the
+  element's descendants are rendered together as a group with the filter effect applied to the group as a whole.
 </p>
 
 <p>
-  The 'filter' property has no effect on the geometry of the
-  target element's CSS boxes, even though 'filter' can cause
+  The 'filter' property has no effect on the geometry of the target element's CSS boxes, even though 'filter' can cause
   painting outside of an element's border box.
 </p>
 
 <p>
-  Conceptually, any parts of the drawing are effected by filter operations. This includes any content, background, borders, text decoration, outline and visible scrolling mechanism of the element to which the filter is applied, and those of its descendants.
+  Conceptually, any parts of the drawing are effected by filter operations. This includes any content, background,
+  borders, text decoration, outline and visible scrolling mechanism of the element to which the filter is applied, and
+  those of its descendants. The filter operations are applied in the element's <var>local coordinate system</var>.
 </p>
 
 <p>
