@@ -984,8 +984,8 @@
 
   <p> The application of the ‘<a href="#filter"><code
    class=property>filter</code></a>’ property to an element formatted with
-   the CSS box model establishes a pseudo-stacking-context the same way that
-   CSS <a href="http://www.w3.org/TR/css3-color/#transparency">‘<code
+   the CSS box model establishes a new stacking context the same way that CSS
+   <a href="http://www.w3.org/TR/css3-color/#transparency">‘<code
    class=property>opacity</code>’</a> does, and all the element's
    descendants are rendered together as a group with the filter effect
    applied to the group as a whole.
@@ -998,7 +998,9 @@
   <p> Conceptually, any parts of the drawing are effected by filter
    operations. This includes any content, background, borders, text
    decoration, outline and visible scrolling mechanism of the element to
-   which the filter is applied, and those of its descendants.
+   which the filter is applied, and those of its descendants. The filter
+   operations are applied in the element's <a
+   href="#local-coordinate-system"><var>local coordinate system</var></a>.
 
   <p> The compositing model follows the <a
    href="http://www.w3.org/TR/SVG11/render.html#Introduction">SVG compositing
